// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots AlertMessage snapshot empty error match 1`] = `null`;

exports[`snapshots AlertMessage snapshot empty info match 1`] = `null`;

exports[`snapshots AlertMessage snapshot full error match 1`] = `
<div
  className="makeStyles-error-5"
>
  Test
</div>
`;

exports[`snapshots AlertMessage snapshot full error match 2`] = `
<div
  className="makeStyles-info-6"
>
  Test
</div>
`;
